-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.4.0
-
None
-
2e5efa1ab80408ff2d385633e7593b06084c4705
Several links in the Enginio docs are either broken, or they got to the wrong page. The docs also need revising.
For Gerrit Dashboard: QTBUG-40919 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
92961,4 | qdoc: Correct some links in QtEnginio | 1.1 | qt/qtenginio | Status: MERGED | +2 | 0 |
94315,13 | qdoc: Correct some links in QtEnginio | 1.1 | qt/qtenginio | Status: MERGED | +2 | 0 |